k8s/first/api-gateway/04-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: k8s-basics
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /app/insurance(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway-nginx-service
                port:
                  number: 80
